--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -18,7 +18,7 @@ textarea {resize:none;}
   margin: 0 auto;
   box-sizing: border-box;
   font-family: 'Inter', Arial, sans-serif;
-  width: 100%;  
+  max-width: 1280px;  
 }
 
 @media screen and (max-width: 767px) {
