--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -1,14 +1,14 @@
 .register {
-  max-width: 396px;
-  width: 100%;
-  margin: 70px auto 0;
+    max-width: 396px;
+    width: 100%;
+    margin: 70px auto 0;
 }
 
 @media screen and (max-width: 460px) {
-  .register {
-    max-width: 260px;
-    margin-top: 40px;
-  }
+    .register {
+        max-width: 260px;
+        margin-top: 40px;
+    }
 }
 
 .register__logo {
@@ -18,23 +18,24 @@
 
 @media screen and (max-width: 768px) {
     .register__logo {
-      margin: 0 auto 40px;
+        margin: 0 auto 40px;
     }
-  }
+}
 
 .register__form {
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (max-width: 460px) {
-  .register__form {
-    max-width: 260px;
-  }
+    .register__form {
+        max-width: 260px;
+    }
 }
+
 .register__title {
     margin: 0;
     font-family: 'Inter';
@@ -47,122 +48,122 @@
 }
 
 @media screen and (max-width: 768px) {
-  .register__title {
-    font-size: 20px;
-    line-height: 24px;
-    margin: 0 auto 38px;
-    text-align: center;
-  }
+    .register__title {
+        font-size: 20px;
+        line-height: 24px;
+        margin: 0 auto 38px;
+        text-align: center;
+    }
 }
 
 .register__button {
-  width: 100%;
-  cursor: pointer;
-  transition: 0.3s opacity;
-  border: none;
-  background: #2be080;
-  border-radius: 3px;
-  height: 45px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 17px;
-  text-align: center;
-  color: #ffffff;
-  margin-bottom: 16px;
+    width: 100%;
+    cursor: pointer;
+    transition: 0.3s opacity;
+    border: none;
+    background: #2be080;
+    border-radius: 3px;
+    height: 45px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #ffffff;
+    margin-bottom: 16px;
 }
 
 .register__button:hover {
-  opacity: 0.85;
+    opacity: 0.85;
 }
 
 @media screen and (max-width: 460px) {
-  .register__button {
-    width: 260px;
-    height: 46px;
-  }
+    .register__button {
+        width: 260px;
+        height: 46px;
+    }
 }
 
 .register__link-block {
-  max-height: 17px;
-  margin: 0 auto;
-  max-width: 217px;
-  display: flex;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  /* identical to box height */
+    max-height: 17px;
+    margin: 0 auto;
+    max-width: 217px;
+    display: flex;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    /* identical to box height */
 
-  text-align: center;
+    text-align: center;
 
-  color: #a0a0a0;
-  transition: 0.3s opacity;
-  text-decoration: none;
+    color: #a0a0a0;
+    transition: 0.3s opacity;
+    text-decoration: none;
 }
 
 .register__link_question {
-  margin-right: 6px;
-  display: block;
-  max-width: 169px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  text-align: center;
-  color: #a0a0a0;
+    margin-right: 6px;
+    display: block;
+    max-width: 169px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #a0a0a0;
 }
 
 .register__link_enter {
-  text-decoration: none;
-  display: block;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 17px;
-  text-align: center;
-  color: #2be080;
+    text-decoration: none;
+    display: block;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    color: #2be080;
 }
 
 .register__link:hover {
-  opacity: 0.6;
+    opacity: 0.6;
 }
 
 @media screen and (max-width: 460px) {
-  .register__button {
-    margin-top: 20px;
-  }
+    .register__button {
+        margin-top: 20px;
+    }
 }
 
 .register__label {
     height: 12px;
-  margin-bottom: 5px;
-  width: 100%;
-  font-style: normal;
-font-weight: 400;
-font-size: 10px;
-line-height: 12px;
-color: #A0A0A0;
+    margin-bottom: 5px;
+    width: 100%;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 12px;
+    color: #A0A0A0;
 }
 
 @media screen and (max-width: 460px) {
-  .register__input:last-of-type {
-    margin-bottom: 173px;
-  }
+    .register__input:last-of-type {
+        margin-bottom: 173px;
+    }
 }
 
 .register__input {
     border: none;
-  width: 100%;
-  height: 27px;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 17px;
-  color: #000000;
-  border-bottom: 2px solid #cccccc;
-  margin-bottom: 24px;
-  text-align: start;
+    width: 100%;
+    height: 27px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    color: #000000;
+    border-bottom: 2px solid #cccccc;
+    margin-bottom: 24px;
+    text-align: start;
 }
 
 .register__input:last-of-type {
@@ -170,5 +171,39 @@ color: #A0A0A0;
 }
 
 .register__input:focus {
-    border-bottom: 2px solid #2BE080;;
+    border-bottom: 2px solid #2BE080;
+    ;
+}
+
+#login .register__input:last-of-type {
+    margin-bottom: 221px;
+}
+
+#login .register__link_question {
+    max-width: 220px;
+}
+
+#login .register__link-block {
+    width: 100%;
+    margin-left: 55px;
+}
+
+@media screen and (max-width: 460px) {
+    #login .register__link-block {
+        width: 100%;
+        margin-left: 9px;
+    }
+    #login .register__link_question {
+        
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 15px;
+    }
+    #login .register__link_enter {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 15px;
+    }
 }
