--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,21 +1,68 @@
 .header {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 18px 70px;
-    display: flex;
-    justify-content: space-between;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 18px 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
-  @media screen and (max-width: 768px) {
-    .header {
-      max-width: 768px;
-      padding: 18px 30px;
-    }
+@media screen and (max-width: 768px) {
+  .header {
+    max-width: 768px;
+    padding: 18px 30px;
   }
-  
-  @media screen and (max-width: 320px) {
-    .header {
-      max-width: 100%;
-      padding: 18px 14px;
-    }
+}
+
+@media screen and (max-width: 320px) {
+  .header {
+    max-width: 100%;
+    padding: 18px 14px;
   }
+}
+
+.header__logo {
+  display: block;
+  margin: 0;
+  padding: 0;
+  width: 38px;
+  height: 38px;
+  transition: transform linear 0.3s;
+}
+.header__twin {
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.header__twin-list {
+  display: flex;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+.header__twin-list_registration {
+  display: block;
+  padding: 8px 20px;
+  font-family: 'Inter';
+  font-style: normal;
+font-weight: 500;
+font-size: 12px;
+line-height: 16px;
+color: #000000;
+text-decoration: none;
+}
+
+.header__twin-list_enter {
+  display: block;
+  padding: 8px 20px;
+  font-family: 'Inter';
+  font-style: normal;
+font-weight: 500;
+font-size: 12px;
+line-height: 16px;
+color: #000000;
+text-decoration: none;
+background: #2BE080;
+border-radius: 3px;
+}
