--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -118,7 +118,7 @@
 .about__timing {
   list-style-type: none;
   padding: 0;
-  margin: 0 auto 110px;
+  margin: 0 auto;
   display: grid;
   grid-template-columns: calc(100% / 5) calc(100% - 100% / 5);
 }
