--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -27,8 +27,14 @@
   padding: 0;
   width: 38px;
   height: 38px;
-  transition: transform linear 0.3s;
+  transition: ease-in-out 0.4s;
+  cursor: pointer;
 }
+
+.header__logo:hover {
+  transform: scale(1.1);
+}
+
 .header__twin {
   display: flex;
   margin: 0;
@@ -41,16 +47,17 @@
   padding: 0;
   list-style-type: none;
 }
+
 .header__twin-list_registration {
   display: block;
   padding: 8px 20px;
   font-family: 'Inter';
   font-style: normal;
-font-weight: 500;
-font-size: 12px;
-line-height: 16px;
-color: #000000;
-text-decoration: none;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  color: #000000;
+  text-decoration: none;
 }
 
 .header__twin-list_enter {
@@ -58,11 +65,36 @@ text-decoration: none;
   padding: 8px 20px;
   font-family: 'Inter';
   font-style: normal;
-font-weight: 500;
-font-size: 12px;
-line-height: 16px;
-color: #000000;
-text-decoration: none;
-background: #2BE080;
-border-radius: 3px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  color: #000000;
+  text-decoration: none;
+  background: #2BE080;
+  border-radius: 3px;
+}
+
+@media screen and (max-width: 940px) {
+  .header__burger {
+    cursor: pointer;
+    width: 44px;
+    height: 44px;
+    transition: ease-in-out 0.4s;
+  }
+  .header__burger:hover {
+    transform: scale(1.2);
+  }
+}
+
+@media screen and (max-width: 490px) {
+  .header__burger {
+    width: 40px;
+    height: 43px;
+  }
+}
+
+@media screen and (min-width: 941px) {
+  .header__burger {
+    display: none;
+  }
 }
