--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -8,6 +8,21 @@
 
 }
 
+@media screen and (max-width: 980px) {
+    .search {
+        max-width: 768px;
+        padding: 80px 30px 110px;
+        margin: 0 auto 10px;
+    }
+}
+
+@media screen and (max-width: 490px) {
+    .search {
+        max-width: 320px;
+        padding: 80px 10px 45px;
+    }
+}
+
 .search__section {
     width: 100%;
     display: flex;
@@ -15,13 +30,35 @@
     border-radius: 9px;
 }
 
+@media screen and (max-width: 700px) {
+    .search__section {
+        flex-direction: column;
+        gap: 46px;
+        background: white;
+    }
+}
+
 .search__block {
+    background: #F9F9F9;
     width: calc(100% - 100%/5);
     display: flex;
-    background-color: #F9F9F9;
     align-items: center;
     padding: 19px 0;
     box-sizing: border-box;
+}
+
+@media screen and (max-width: 980px) {
+    .search__block {
+        width: calc(100% - 100%/3.4);
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .search__block {
+        width: 100%;
+        padding-left: 19px;
+        padding-right: 19px;
+    }
 }
 
 .search__image {
@@ -29,7 +66,12 @@
     height: 34px;
     margin-left: 19px;
     margin-right: 10px;
+}
 
+@media screen and (max-width: 700px) {
+    .search__image {
+        display: none;
+    }
 }
 
 .search__form {
@@ -38,13 +80,25 @@
     border-right: 1px solid #E8E8E8;
 }
 
+@media screen and (max-width: 980px) {
+    .search__form {
+        width: calc(100% - 100%/7.9);
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .search__form {
+        width: 100%;
+        border: none;
+    }
+}
+
 .search__field {
     margin: 0;
     padding: 0;
     border: none;
     display: flex;
     width: 100%;
-
 }
 
 .search__input {
@@ -59,7 +113,18 @@
     font-size: 14px;
     line-height: 17px;
     color: #000000;
+}
 
+@media screen and (max-width: 980px) {
+    .search__input {
+        width: calc(100% - 100%/8.9);
+    }
+}
+
+@media screen and (max-width: 490px) {
+    .search__input {
+        width: calc(100% - 100%/6.7);
+    }
 }
 
 .search__input::placeholder {
@@ -68,6 +133,12 @@
     font-size: 18px;
     line-height: 20px;
     color: #A0A0A0;
+}
+
+@media screen and (max-width: 490px) {
+    .search__input::placeholder {
+        font-size: 14px;
+    }
 }
 
 .search__submit {
@@ -87,51 +158,12 @@
     transition: all ease-in-out 0.3s;
 }
 
+@media screen and (max-width: 1180px) {
+    .search__submit {
+        margin: 0;
+    }
+}
+
 .search__submit:hover {
     transform: scale(1.3);
-}
-
-.filter {
-    width: calc(100%/5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 14px;
-}
-
-.filter__checkbox {
-    width: 36px;
-    height: 20px;
-    background-image: url(../../images/41-416223_off-switch-icon-png-transparent-png.png);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-color: #F9F9F9;
-    box-sizing: border-box;
-    cursor: pointer;
-    transition: all ease-in-out 0.4s;
-    bottom: 2px;
-}
-
-.filter__checkbox_active {
-    background-image: url(../../images/smalltumb.png);
-    background-size: cover;
-}
-
-.filter__input {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
-    width: 36px;
-    height: 20px;
-}
-
-.filter__subtitle {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 13px;
-    line-height: 18px;
-    color: #000000;
-    margin: 0;
-    padding: 0;
 }
