--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -86,6 +86,7 @@
 @media screen and (max-width: 980px) {
     .profile__buttons {
         margin-top: 210px;
+        margin-bottom: 269px;
     }
   }
 
