--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -58,6 +58,7 @@
         width: 100%;
         padding-left: 19px;
         padding-right: 19px;
+        border-radius: 9px;
     }
 }
 
@@ -125,6 +126,11 @@
     .search__input {
         width: calc(100% - 100%/6.7);
     }
+}
+
+.search__input:focus {
+    border-bottom: 2px solid #2BE080;
+    ;
 }
 
 .search__input::placeholder {
