--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -3,7 +3,7 @@
     padding: 70px;
     border-bottom: 2px solid #E8E8E8;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     margin-bottom: 10px;
 
 }
@@ -164,6 +164,11 @@
     transition: all ease-in-out 0.3s;
 }
 
+.search__submit_disabled {
+    cursor: default;
+
+}
+
 @media screen and (max-width: 1180px) {
     .search__submit {
         margin: 0;
@@ -171,5 +176,21 @@
 }
 
 .search__submit:hover {
-    transform: scale(1.3);
+    transform: scale(1.2);
+}
+
+.search__submit_disabled:hover {
+    transform: none;
+}
+
+.search__no-text {
+    width: 100%;
+    color: red;
+    margin: 0;
+    padding: 0;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 14px;
+    text-align: left;
 }
